--- a/point.html
+++ b/point.html
@@ -190,10 +190,13 @@ Profile: https://facebook.com/musammat.samina
 	  	<section class="p-v-xl bg-light">
 		  <div class="container">
 		    <div class="row">
-		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
+		      <div class="col-sm-12 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
 		        <h1 class="text-dark">Magical Work Done</h1>
 		        <p class="">some awesome magical work we've done!</p>
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div> 
 
@@ -203,6 +206,7 @@ Profile: https://facebook.com/musammat.samina
 								<div class="top w-full p-h-xxl p-v-lg">
 									<h5 class="text-dark">BIDA eService Portal for Investor</h5>
 									<div class="line line-lg b-b b-white w-3x m-auto"></div>
+
 									<p class="text-dark">
 										The Investor eService is web-based application for investors to receive Visa Recommendation Letter, Visa On arrival letter, Work Permit through online.
 									</p>
