--- a/index.html
+++ b/index.html
@@ -774,9 +774,9 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>				     
  					
-<a href="https://humdard.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/humdard.jpg" alt="" class="img-full wrapper-xs bg-white">
+<a href="https://hamdard.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/hamdard.jpg" alt="" class="img-full wrapper-xs bg-white">
 			               </a>                                          
-		        <h5 class="text-dark"> Humdard Laboratories </h5>				      
+		        <h5 class="text-dark"> Hamdard Laboratories </h5>				      
  </div>
 				    </div>
 </div>
