--- a/index.html
+++ b/index.html
@@ -734,6 +734,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 		                                                         
 	 <h5 class="text-dark"> Khaas Food</h5>
  </a> 
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://wa.me/8801760136487" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bhagyakul.jpg" alt="" class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark"> Bhagyakul Mistanna Bhander</h5>
+				     			        </a>  
 	         </div>
 				    </div>
 			  </div>
