--- a/index.html
+++ b/index.html
@@ -643,6 +643,13 @@ ACI Seed Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			                                                      
 		  <h5 class="text-dark"> Brac IED </h5>			      
  </a> 
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://wa.me/8801721981804" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/abfashionhouse.jpg" alt="" class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark"> AB Fashion House</h5>
+				     			        </a> 
+
 				       </p>
 				       </div>
 				    </div>
