--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@ Profile: https://facebook.com/musammat.samina
 		        <h6 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
  <span class="text-primary">( Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh. ) <br>
 <a href ="mailto:musammatsamina@gmail.com">musammatsamina@gmail.com <i class="fa fa-envelope" aria-hidden="true"></i> </a>
+
+<a href="https://wa.me/8801722393251" class="thumb-lg m-t-n-lg m-r-n-lg"> <i class="fa fa-whatsapp" aria-hidden="true"></i> 
+			                                                        
+				     			        </a> 
 </span>
 </h6>
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
