--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Profile: https://facebook.com/musammat.samina
 		
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://idtax.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/idtaxgovbd.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://ldtax.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ldtaxgovbd.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark">Land service</h5>
 				      </a>		
