--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Profile: https://facebook.com/musammat.samina
 		<meta charset="utf-8">
 		<title>Musammat Samina</title>
 		<meta name="description" content="Musammat Samina">
-		<meta name="viewport" content="width=990, initial-scale=1" />
+<meta name="viewport" content="width=device-width">
 
 		<link rel="shortcut icon" href="/favicon.ico">
 
