--- a/index.html
+++ b/index.html
@@ -433,12 +433,18 @@ website:https://musammatsamina.github.io
 		    <h5 class="text-dark">Digital Business Identification Number </h5>
 				      </a>		
 
-		
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <a href="https://ldtax.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ldtaxgovbd.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark">Land service</h5>
+				      </a>		
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://play.google.com/store/apps/details?id=com.comjagat" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cj.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> Computer Jagat Magazine</h5>
 				      </a>		
      </p>
 				       </div>
