--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ website:https://musammatsamina.github.io
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://play.google.com/store/apps/details?id=com.comjagat" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cj.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://play.google.com/store/apps/details?id=com.comjagat" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/cj.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> Computer Jagat Magazine</h5>
 				      </a>		
