--- a/index.html
+++ b/index.html
@@ -446,6 +446,13 @@ website:https://musammatsamina.github.io
 			                                                         
 		    <h5 class="text-dark"> Computer Jagat Magazine</h5>
 				      </a>		
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://eprocure.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eprocuregovbd.png" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> e-Government Procurement System</h5>
+				      </a>		
      </p>
 				       </div>
 				    </div>
