--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ website:https://musammatsamina.github.io
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://eprocure.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eprocuregovbd.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://eprocure.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eprocuregovbd.gif" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> e-Government Procurement System</h5>
 				      </a>		
