--- a/index.html
+++ b/index.html
@@ -637,6 +637,10 @@ website:https://musammatsamina.github.io
 
 <img src="imgs/141508.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<img src="imgs/fragrance spray.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
 </div>
 		 </div>
 </section>
