--- a/index.html
+++ b/index.html
@@ -525,8 +525,14 @@ website:https://musammatsamina.github.io
 			                                                         
 		    <h5 class="text-dark"> BPO Summit </h5>
 				      </a>
-</p>
 
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://ictd.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ictdgovbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> Invest in Digital Bangladesh</h5>
+				      </a>
+</p>
 				         </div>
 				    </div>
 			  </div>
