--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ website:https://musammatsamina.github.io
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://ictd.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ictdgovbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://ictd.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ictdgovbd.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> Invest in Digital Bangladesh</h5>
 				      </a>
