--- a/index.html
+++ b/index.html
@@ -862,6 +862,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
  					
 <a href="https://hamdard.com.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/hamdard.jpg" alt="" class="img-full wrapper-xs bg-white">
 			                                                 <h5 class="text-dark"> Hamdard Laboratories </h5>				
+ </a>     
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>				     
+ 					
+<a href="https://t.ted.com/H91sVBI" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tedconferences.jpg" alt="" class="img-full wrapper-xs bg-white">
+			                                                 <h5 class="text-dark"> TED Conferences </h5>				
  </a>       
  </div>
 			 </div>
