--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>				     
  					
-<a href="https://t.ted.com/H91sVBI" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tedconferences.jpg" alt="" class="img-full wrapper-xs bg-white">
+<a href="https://t.ted.com/H91sVBI" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tedconferences.png" alt="" class="img-full wrapper-xs bg-white">
 			                                                 <h5 class="text-dark"> TED Conferences </h5>				
  </a>       
  </div>
