--- a/index.html
+++ b/index.html
@@ -885,6 +885,10 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <a class="twitter-timeline" data-lang="en" data-height="200" data-dnt="true" href="https://twitter.com/seagirlsabo/lists/1527415332662521856?ref_src=twsrc%5Etfw">A Twitter List by seagirlsabo</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://www.islamibankbd.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/islamibank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+</a>
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <img src="imgs/ukti1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
