--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://www.islamibankbd.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/islamibank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<a href="https://www.islamibankbd.com/" class=" m-t-n-lg m-r-n-lg"> <img src="imgs/islamibank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 </a>
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
