--- a/index.html
+++ b/index.html
@@ -879,7 +879,9 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
+<a href="https://sonalibank.com.bd">
 <img src="imgs/sonali_bank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+</a>
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
@@ -887,7 +889,7 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://www.islamibankbd.com/" class=" m-t-n-lg m-r-n-lg"> <img src="imgs/islamibank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+<a href="https://www.islamibankbd.com/"> <img src="imgs/islamibank.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 </a>
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
