--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ website:https://musammatsamina.github.io
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="https://epaper.manobkantha.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/manobkantha.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://epaper.manobkantha.com.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/manobkantha.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark"> E - Manobkantha </h5>
 				      </a>				
