--- a/index.html
+++ b/index.html
@@ -972,13 +972,24 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			</div>
 		</section>
 
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
 		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		
 		<script src="dist/js/bootaide.min.js"></script>
 <script src="dist/js/custom.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41EQ0WGSBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41EQ0WGSBY');
+</script>		
+
 <script>
   window.fbAsyncInit = function() {
     FB.init({
