--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@ website:https://musammatsamina.github.io
 			                                                         
 		        <h5 class="text-dark"> Bangladesh News 24 Hours Ltd </h5>
 				      </a>
+
+    <div class="line line-lg w-3x b-b m-auto"></div>
+
+  <a href="https://bonikbarta.net" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bonikbarta.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h5 class="text-dark"> বণিক বার্তা</h5>
+				      </a>
 </p>
 </div>
 </div>
