--- a/blog.html
+++ b/blog.html
@@ -204,6 +204,28 @@ series2.columns.template.strokeWidth = 2;
     });
 
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41EQ0WGSBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41EQ0WGSBY');
+</script>		
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId            : 'your-app-id',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v17.0'
+    });
+  };
+</script>
+
 <script>
       function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
