--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>musammatsamina.github.io</title>
-		<meta name="description" content="Musammat Samina">
+		<meta name="description" content="Gallery Musammat Samina">
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
 
@@ -607,6 +607,26 @@
 		
 		<script src="dist/js/bootaide.min.js"></script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41EQ0WGSBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41EQ0WGSBY');
+</script>		
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId            : 'your-app-id',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v17.0'
+    });
+  };
+</script>
 <script>
 
     function addHTML() {
