--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@ Profile: https://facebook.com/musammat.samina
 	<head>
 		<meta charset="utf-8">
 		<title>musammatsamina.github.io</title>
-		<meta name="description" content="Musammat Samina">
+		<meta name="description" content="Portfolio Musammat Samina">
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
 
@@ -144,6 +144,27 @@ Profile: https://facebook.com/musammat.samina
 <script type="text/javascript" src=""></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-41EQ0WGSBY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-41EQ0WGSBY');
+</script>		
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId            : 'your-app-id',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v17.0'
+    });
+  };
+</script>
 <script>
       function addHTML() {
          var el, i, domEl, fileName, xmlHttp;
