--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ website:https://musammatsamina.github.io
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://eticket.railway.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/railwaygovbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://eticket.railway.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/railwaygovbd.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> Railway e-ticket System</h5>
 				      </a>		
