--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ website:https://musammatsamina.github.io
 	<head>
 		<meta charset="utf-8">
 		<title>Musammat Samina</title>
-		<meta name="description" content="Musammat Samina">
+		<meta name="description" content="Musammat Samina, women entrepreneur's networking platform">
 <meta name="viewport" content="width=device-width">
 
 		<link rel="shortcut icon" href="/favicon.ico">
