--- a/index.html
+++ b/index.html
@@ -653,6 +653,12 @@ website:https://musammatsamina.github.io
 		    <h5 class="text-dark"> Tupperware Bangladesh </h5>
 				      </a>		
 
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+<a href="https://infocom.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/infocomgovbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> Info Act Bangladesh </h5>
+				      </a>		
 </p>
 				         </div>
 				    </div>
