--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@ website:https://musammatsamina.github.io
 											
 <div class=""> 
                               
-	 <span class="m-b-xl text-center p-v m-v-xl"> 
-    <a href="sixtys.html" class="btn btn-primary"> Best of 60es </a>
+	 <span class="m-b-xl text-center p-v m-v-xl">
+ 
+<a href="https://www.facebook.com/profile.php?id=100075473425112" class="btn btn-primary"><img src="imgs/samina_mart.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	</a>
+<br>
+    <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
 <a href="seventys.html" class="btn btn-info"> Best of 70es </a>
 <a href="eightys.html" class="btn btn-danger"> Best of 80es </a>
 </span>
@@ -70,9 +73,6 @@ website:https://musammatsamina.github.io
     <a href="ninetys.html" class="btn btn-warning"> Best of 90es </a>
 <a href="older.html" class="btn btn-danger"> Best of older  </a>
 <a href="newborn.html" class="btn btn-success"> Best of newborn </a>
-<br><br>
-<a href="hajjapp.html" class="btn btn-primary"> E- Hajj Information</a>
-<a href="mcq.html" class="btn btn-warning"> MCQ </a>
 </span>
 </div>
 </div>
