--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ website:https://musammatsamina.github.io
                               
 	 <span class="m-b-xl text-center p-v m-v-xl">
  
-<a href="https://www.facebook.com/profile.php?id=100075473425112" class="btn btn-primary"><img src="imgs/samina_mart.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	</a>
+<a href="https://www.facebook.com/profile.php?id=100075473425112" class=""><img src="imgs/samina_mart.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	</a>
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
 <a href="seventys.html" class="btn btn-info"> Best of 70es </a>
