--- a/ninetys.html
+++ b/ninetys.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>musammatsamina.github.io</title>
-		<meta name="description" content="Ninetys Information">
+		<meta name="description" content="Entrepreneur Information">
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
 
@@ -31,7 +31,7 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark"> Ninetys Information ☕ </h1>
+		        <h1 class="text-dark"> Entrepreneur Information ☕ </h1>
 		        <p class="">some awesome tour i've done!</p>
 </div>
 
