--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ website:https://musammatsamina.github.io
 </span>
 </h6>
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
-    <a href="ninetys.html" class="btn btn-warning"> Best of 90es </a>
+    <a href="ninetys.html" class="btn btn-warning"> Entrepreneur </a>
 <a href="older.html" class="btn btn-danger"> Best of older  </a>
 <a href="newborn.html" class="btn btn-success"> Best of newborn </a>
 </span>
