--- a/ninetys.html
+++ b/ninetys.html
@@ -53,50 +53,50 @@
 <h1 class="text-dark"> ৯ টি পদক্ষেপ / পরিকল্পনা আপনাকে সাহায্য করতে পারে:</h1>
 
 আপনি যদি পূর্বে কখনও ব্যবসা না করে থাকেন তবে প্রথমবার ব্যবসা শুরুর ক্ষেত্রে একটু ভয় হতেই পারে। কারণ এর জন্য অনেক পরিশ্রম এবং পরিকল্পনা লাগে। তার উপর , বেশীর ভাগ ব্যবসার মাত্র অর্ধেক পাঁচ বছর বা তার বেশি সময় টিকে থাকে, বাকি গুলো এর মাধ্যেই বিলুপ্ত হয়ে যায় ।
-
+<br>
 এই আলোচনায় আমরা স্টার্টআপের জন্য ৯ টি কৌশল নিয়ে আলোচনা করবো যা আপনি অনুসরণ করতে পারেন আপনার কোম্পানীকে এগিয়ে নিতে এবং চালু করতে:
 
-<h3 class="text-dark">১. একটি দুর্দান্ত আইডিয়া দিয়ে শুরু করুন:</h3>
+<br><h3 class="text-dark">১. একটি দুর্দান্ত আইডিয়া দিয়ে শুরু করুন:</h3>
 
-একটি ব্যবসা শুরু করার পরিকল্পনা করার জন্য আপনার প্রথম ধাপ হল একটি সমস্যা এবং সমাধান চিহ্নিত করা। এর কারণ হল আমরা যদি লক্ষ্য করি সফল স্টার্টআপগুলি এমন কিছু ধারণা থেকে শুরু হয় যা গ্রাহকদের একটি গ্রুপের চাহিদা পূরণ করে। কিন্তু তার মানে এই না যে আপনার ধারণা সবসময় নতুন হতে হবে! আপনি বিদ্যমান পণ্য বা পরিষেবাগুলি এমনভাবে উপস্থাপন করতে পারেন যা ভোক্তার জন্য আরও ভাল এবং সহজ হতে পারে:
+একটি ব্যবসা শুরু করার পরিকল্পনা করার জন্য আপনার প্রথম ধাপ হল একটি সমস্যা এবং সমাধান চিহ্নিত করা। এর কারণ হল আমরা যদি লক্ষ্য করি সফল স্টার্টআপগুলি এমন কিছু ধারণা থেকে শুরু হয় যা গ্রাহকদের একটি গ্রুপের চাহিদা পূরণ করে। কিন্তু তার মানে এই না যে আপনার ধারণা সবসময় নতুন হতে হবে! আপনি বিদ্যমান পণ্য বা পরিষেবাগুলি এমনভাবে উপস্থাপন করতে পারেন যা ভোক্তার জন্য আরও ভাল এবং সহজ হতে পারে:<br>
 
 ✍ পণ্যের উপস্থাপনের ধরণ পরিবর্তন
-✍ নতুন কিছু বৈশিষ্ট্য যোগ করা
-✍ গ্রাহকরা ইতিমধ্যেই পছন্দ করেন এমন পণ্যের নতুন ব্যবহার খোঁজা।
-
+<br>✍ নতুন কিছু বৈশিষ্ট্য যোগ করা
+<br>✍ গ্রাহকরা ইতিমধ্যেই পছন্দ করেন এমন পণ্যের নতুন ব্যবহার খোঁজা।
+<br>
 উদাহরণস্বরূপ, আমরা যদি অ্যাপল এর শুরুর দিকটা দেখি তাহলে দেখতে পাবো। যখন অ্যাপল বাজারে উন্নতমানের কম্পিউটার নিয়ে এসেছে যা প্রযুক্তিগত দিক থেকে অনেকটা উন্নত এবং বাজারে আরও ভালভাবে ফিট করে। তারা আইফোন এবং আইপ্যাডের মতো নতুন পণ্যের বিকাশ অব্যাহত রেখেছে, প্রতিটি আপডেটের সাথে আরও কার্যকর করে তোলে। যেমন তারা iPads-এর জন্য একটি কীবোর্ড যোগ করছে যা তাদের ল্যাপটপের মতো করে সহজে ব্যবহার করা যায়। মনে হয় না অ্যাপলের বর্তমান জনপ্রিয়তা, বাজার সর্ম্পকে আপনাদের বলতে হবে।
 
-<h3 class="text-dark">২. একটি ব্যবসায়িক পরিকল্পনা করুন</h3>
+<br><h3 class="text-dark">২. একটি ব্যবসায়িক পরিকল্পনা করুন</h3>
 
-যখনই আপনার ব্যবসায়ের আইডিয়া ঠিক হয়ে গেলো এইবার আপনি একটি ব্যবসায়িক পরিকল্পনা তৈরি করা শুরু করুন যা আপনার পণ্য এবং সার্ভিস গুলিকে বিস্তারিত ভাবে উপস্থান করে। এটিতে আপনার ইন্ডাস্ট্রি, অপারেশনাল, ফাইনান্স এবং মার্কেটিং এনালাইসিস এর মতো বিষয় গুলো থাকবে।
+<br>যখনই আপনার ব্যবসায়ের আইডিয়া ঠিক হয়ে গেলো এইবার আপনি একটি ব্যবসায়িক পরিকল্পনা তৈরি করা শুরু করুন যা আপনার পণ্য এবং সার্ভিস গুলিকে বিস্তারিত ভাবে উপস্থান করে। এটিতে আপনার ইন্ডাস্ট্রি, অপারেশনাল, ফাইনান্স এবং মার্কেটিং এনালাইসিস এর মতো বিষয় গুলো থাকবে।
 আপনার স্টার্টআপের জন্য আর্থিক সহযোগীতা পাওয়ার জন্য একটি ব্যবসায়িক পরিকল্পনা লেখাও গুরুত্বপূর্ণ। ব্যাংক কিংবা আর্থিক সংস্থাগুলি এমন সংস্থাগুলিকে ঋণ দেওয়ার সম্ভাবনা বেশি যেগুলো স্পষ্টভাবে ব্যাখ্যা করতে পারে যে তারা কীভাবে অর্থ ব্যবহার করতে চলেছে এবং কেন তাদের এটি প্রয়োজন।
 
-<h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
+<br><h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
 
-আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
-✍ ফ্রেন্ডস এবং ফ্যামিলি
-✍ এঞ্জেল ইনভেস্টর
-✍ ভেঞ্চার ক্যাপিটাল
-✍ ব্যাংক লোন
-
+<br>আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
+<br>✍ ফ্রেন্ডস এবং ফ্যামিলি
+<br>✍ এঞ্জেল ইনভেস্টর
+<br>✍ ভেঞ্চার ক্যাপিটাল
+<br>✍ ব্যাংক লোন
+<br>
 উন্নত দেশ গুলোতে এর বাহিরেও অনেক প্রতিষ্ঠান আছে যারা সহজ শর্তে ঋণ দেয় , আমাদের দেশে ওই সুবিধাগুলো তেমন একটা পাওয়া যায় না। তবে আপনার যদি পূর্বের আয় মোটামুটি ভালো থাকে আর সেটি ব্যাংক এর মাধ্যমে লেনদেন হয়ে থাকে, মূল কথা আপনার ব্যাংক স্টেটমেন্ট ভালো হয়, তাহলে আপনি ক্রেডিট কার্ড, কিংবা ব্যাংক থেকে ব্যাক্তগত ঋণ নিয়ে ও সেটি ম্যানেজ করতে পারেন ।
-
+<br>
 এতো কিছুর পরেও যদি আপনি আপনার পরিকল্পনা অনুযায়ী অর্থের যোগান করতে না পারেন এবং এর পরেও শুরু করতে চান তাহলে আপনাকে আপনার ব্যবসা পরিচলনার খরচ কমিয়ে নিয়ে আসার দিকে লক্ষ করতে হবে । এবং ঝুকি নিয়ে শুরু করতে হবে , যা অনেকইটাই ঝুকিপূর্ণ কারণ জরিপ অনুযায়ী দেখা যায় প্রায় ২৯% স্টার্টআপ ব্যর্থ হয় কারণ তাদের অর্থ ফুরিয়ে যায়।
-
+<br>
 আর যদি আপনি আপনার প্রয়োজনীয় অর্থ পেয়ে যান , তাহলে অবশ্যই আপনাকে আপনার খরচ, ক্যাশ ফ্লো (Cash Flow) এবং আপনার নেওয়া লোনের সুধ কেমন হবে এই সব কিছুর একটা হিসাব করে নিন । তাহলে আপনার ব্যবসার হিসেব ট্র্যাক করতে সুবিধা হবে এর জন্য আপনি QuickBooks কিংবা FreshBooks ব্যবহার করতে পারেন।
-
+<br>
 <h3 class="text-dark">৪. সঠিক লোকেদের সাথে নিজেকে ঘিরে রাখুন</h3>
-
+<br>
 ব্যবসা শুরু করার ক্ষেত্রে অনেক ঝুঁকি থাকতে পারে। সেজন্য আপনাকে পথ দেখানোর জন্য প্রয়োজনীয় ব্যবসায়িক উপদেষ্টার প্রয়োজন হবে, যেমন:
-✍ আইনজীবী
-✍ সার্টিফাইড পাবলিক অ্যাকাউন্ট্যান্টস (সিপিএ)
-✍ ব্যাংকার
-✍ ইন্সুরেন্স কোম্পানি
-
+<br>✍ আইনজীবী
+<br>✍ সার্টিফাইড পাবলিক অ্যাকাউন্ট্যান্টস (সিপিএ)
+<br>✍ ব্যাংকার
+<br>✍ ইন্সুরেন্স কোম্পানি
+<br>
 ছোট ব্যবসার প্রাথমিক পর্যায়ে সঠিক স্টার্টআপ টিম তৈরি করা বিশেষভাবে গুরুত্বপূর্ণ। এর মানে আপনি সাবধানে আপনার জন্য টিম মেম্বার নির্বাচন করতে চাইবেন:
-✍ সহ-প্রতিষ্ঠাতা (Co-founders)
-✍ কর্মচারী
-
+<br>✍ সহ-প্রতিষ্ঠাতা (Co-founders)
+<br>✍ কর্মচারী
+<br>
 </div>
 </div>
 </section>
