--- a/ninetys.html
+++ b/ninetys.html
@@ -38,7 +38,7 @@
 <div class="col-sm-12 text-center">
 
 <div class="line line-lg w-3x b-b m-auto"></div>
-		      	<img src="imgs/enterprenure.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/entrepreneur.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	   
 <div class="line line-lg w-3x b-b m-auto"></div>
 </div>	
