--- a/ninetys.html
+++ b/ninetys.html
@@ -68,12 +68,12 @@
 </p>
 <br><h3 class="text-dark">২. একটি ব্যবসায়িক পরিকল্পনা করুন</h3>
 
-<p  class="text-justify"><br>যখনই আপনার ব্যবসায়ের আইডিয়া ঠিক হয়ে গেলো এইবার আপনি একটি ব্যবসায়িক পরিকল্পনা তৈরি করা শুরু করুন যা আপনার পণ্য এবং সার্ভিস গুলিকে বিস্তারিত ভাবে উপস্থান করে। এটিতে আপনার ইন্ডাস্ট্রি, অপারেশনাল, ফাইনান্স এবং মার্কেটিং এনালাইসিস এর মতো বিষয় গুলো থাকবে।
+<p  class="text-justify">যখনই আপনার ব্যবসায়ের আইডিয়া ঠিক হয়ে গেলো এইবার আপনি একটি ব্যবসায়িক পরিকল্পনা তৈরি করা শুরু করুন যা আপনার পণ্য এবং সার্ভিস গুলিকে বিস্তারিত ভাবে উপস্থান করে। এটিতে আপনার ইন্ডাস্ট্রি, অপারেশনাল, ফাইনান্স এবং মার্কেটিং এনালাইসিস এর মতো বিষয় গুলো থাকবে।
 আপনার স্টার্টআপের জন্য আর্থিক সহযোগীতা পাওয়ার জন্য একটি ব্যবসায়িক পরিকল্পনা লেখাও গুরুত্বপূর্ণ। ব্যাংক কিংবা আর্থিক সংস্থাগুলি এমন সংস্থাগুলিকে ঋণ দেওয়ার সম্ভাবনা বেশি যেগুলো স্পষ্টভাবে ব্যাখ্যা করতে পারে যে তারা কীভাবে অর্থ ব্যবহার করতে চলেছে এবং কেন তাদের এটি প্রয়োজন।
 </p>
 <br><h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
 
-<p  class="text-justify"><br>আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
+<p  class="text-justify">আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
 <br>✍ ফ্রেন্ডস এবং ফ্যামিলি
 <br>✍ এঞ্জেল ইনভেস্টর
 <br>✍ ভেঞ্চার ক্যাপিটাল
@@ -97,6 +97,18 @@
 <br>✍ সহ-প্রতিষ্ঠাতা (Co-founders)
 <br>✍ কর্মচারী
 </p>
+<h3 class="text-dark">৫. আইনি বিষয় গুলোর দিকে নজর দিন:</h3>
+
+<p  class="text-justify">
+আপনার পণ্য ডিজাইন করা থেকে শুরু করে আপনার কর্মক্ষেত্র (অফিস) সেট আপ করা, আপনার স্বপ্নের স্টার্টআপ খোলা অনেক মজার হতে পারে। কিন্তু আপনি আনুষ্ঠানিক ভাবে বাজারে প্রবেশ করার আগে, আপনার র্স্টাটআপকে সাফল্যের সর্বোত্তম স্থানে নেওয়ার জন্য অবশ্যই সঠিক আইনি পদক্ষেপ নিতে হবে, যার মধ্যে রয়েছে:
+<br>✍ একটি ব্যবসা লাইসেন্সের জন্য আবেদন
+<br>✍ আপনার ব্যবসার নাম নিবন্ধন
+<br>✍ ট্যাক্স আইডি নিবন্ধন
+<br>✍ ট্রেডমার্ক
+<br>✍ একটি ব্যবসায়িক ব্যাংক অ্যাকাউন্ট খোলা
+<br>✍ যে ইন্ড্রাস্টি নিয়ে কাজ করবেন তার সর্ম্পকে সঠিক বিষয় জানা (আইনি বিষয় সমূহ)<br>
+✍ ক্লায়েন্ট এবং অন্য যাদের সাথে আপনি কাজ করার পরিকল্পনা করছেন তাদের জন্য চুক্তি তৈরি করা
+<br></p>
 </div>
 </div>
 </section>
