--- a/ninetys.html
+++ b/ninetys.html
@@ -56,7 +56,7 @@
 <br>
 এই আলোচনায় আমরা স্টার্টআপের জন্য ৯ টি কৌশল নিয়ে আলোচনা করবো যা আপনি অনুসরণ করতে পারেন আপনার কোম্পানীকে এগিয়ে নিতে এবং চালু করতে:
 </p>
-<br><h3 class="text-dark">১. একটি দুর্দান্ত আইডিয়া দিয়ে শুরু করুন:</h3>
+<h3 class="text-dark">১. একটি দুর্দান্ত আইডিয়া দিয়ে শুরু করুন:</h3>
 
 <p  class="text-justify">একটি ব্যবসা শুরু করার পরিকল্পনা করার জন্য আপনার প্রথম ধাপ হল একটি সমস্যা এবং সমাধান চিহ্নিত করা। এর কারণ হল আমরা যদি লক্ষ্য করি সফল স্টার্টআপগুলি এমন কিছু ধারণা থেকে শুরু হয় যা গ্রাহকদের একটি গ্রুপের চাহিদা পূরণ করে। কিন্তু তার মানে এই না যে আপনার ধারণা সবসময় নতুন হতে হবে! আপনি বিদ্যমান পণ্য বা পরিষেবাগুলি এমনভাবে উপস্থাপন করতে পারেন যা ভোক্তার জন্য আরও ভাল এবং সহজ হতে পারে:<br>
 
@@ -66,12 +66,12 @@
 <br>
 উদাহরণস্বরূপ, আমরা যদি অ্যাপল এর শুরুর দিকটা দেখি তাহলে দেখতে পাবো। যখন অ্যাপল বাজারে উন্নতমানের কম্পিউটার নিয়ে এসেছে যা প্রযুক্তিগত দিক থেকে অনেকটা উন্নত এবং বাজারে আরও ভালভাবে ফিট করে। তারা আইফোন এবং আইপ্যাডের মতো নতুন পণ্যের বিকাশ অব্যাহত রেখেছে, প্রতিটি আপডেটের সাথে আরও কার্যকর করে তোলে। যেমন তারা iPads-এর জন্য একটি কীবোর্ড যোগ করছে যা তাদের ল্যাপটপের মতো করে সহজে ব্যবহার করা যায়। মনে হয় না অ্যাপলের বর্তমান জনপ্রিয়তা, বাজার সর্ম্পকে আপনাদের বলতে হবে।
 </p>
-<br><h3 class="text-dark">২. একটি ব্যবসায়িক পরিকল্পনা করুন</h3>
+<h3 class="text-dark">২. একটি ব্যবসায়িক পরিকল্পনা করুন</h3>
 
 <p  class="text-justify">যখনই আপনার ব্যবসায়ের আইডিয়া ঠিক হয়ে গেলো এইবার আপনি একটি ব্যবসায়িক পরিকল্পনা তৈরি করা শুরু করুন যা আপনার পণ্য এবং সার্ভিস গুলিকে বিস্তারিত ভাবে উপস্থান করে। এটিতে আপনার ইন্ডাস্ট্রি, অপারেশনাল, ফাইনান্স এবং মার্কেটিং এনালাইসিস এর মতো বিষয় গুলো থাকবে।
 আপনার স্টার্টআপের জন্য আর্থিক সহযোগীতা পাওয়ার জন্য একটি ব্যবসায়িক পরিকল্পনা লেখাও গুরুত্বপূর্ণ। ব্যাংক কিংবা আর্থিক সংস্থাগুলি এমন সংস্থাগুলিকে ঋণ দেওয়ার সম্ভাবনা বেশি যেগুলো স্পষ্টভাবে ব্যাখ্যা করতে পারে যে তারা কীভাবে অর্থ ব্যবহার করতে চলেছে এবং কেন তাদের এটি প্রয়োজন।
 </p>
-<br><h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
+<h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
 
 <p  class="text-justify">আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
 <br>✍ ফ্রেন্ডস এবং ফ্যামিলি
