--- a/ninetys.html
+++ b/ninetys.html
@@ -106,6 +106,23 @@
 <br>✍ যে ইন্ড্রাস্টি নিয়ে কাজ করবেন তার সর্ম্পকে সঠিক বিষয় জানা (আইনি বিষয় সমূহ)<br>
 ✍ ক্লায়েন্ট এবং অন্য যাদের সাথে আপনি কাজ করার পরিকল্পনা করছেন তাদের জন্য চুক্তি তৈরি করা
 <br></p>
+
+<h3 class="text-dark">৬. একটি অফিস স্থাপন করুন (এড্রেসেবল এবং অনলাইন)</h3>
+
+<p  class="text-justify">
+একটি অফিস স্পেস সেট আপ করতে হবে, সেটি ভাড়ায় নিবেন নাকি কিনে নিবেন সেটি আপনার পরিকল্পনা অনুযায়ী বেষ্ট যা হবে তাই করুন । তবে বেশীর ভাগ ক্ষেত্রে স্টার্টআপগুলি শুরুতে ভাড়ায় অফিস নিয়ে থাকে যাতে করে কোম্পানির অন্যান্য দিকগুলিতে তাদের অর্থ বিনিয়োগ করতে পারে। তবে কিছু অবস্থানে আপনার স্টার্টআপের জন্য লিজিং একটি সস্তা উপায় হতে পারে। কেন না বাড়ির মালিক যে কোন সময় ভাড়া বৃদ্ধি করতে পারে, যাতে করে আপনার খরচ বেড়ে যাবে, এর ফলে আপনাকে অফিস ছেড়ে দেওয়ার মতো অবস্থায় ও ফেলতে পারে।
+</p>
+
+<p  class="text-justify">
+আজকের ডিজিটাল যুগে, একটি অনলাইন উপস্থিতি এবং ই-কমার্স প্ল্যাটফর্ম সেট আপ করা গুরুত্বপূর্ণ। আসলে, এটি ছাড়া সফল হতে আপনার সমস্যা হবে। এর কারণ হল গ্রাহকরা ক্রমবর্ধমানভাবে অনলাইনে কেনাকাটা করছেন এবং আপনার পণ্য সম্পর্কে আরও তথ্য জানতে গুগল ব্যবহার করছেন। এর উপরে, ওয়েবসাইট থাকলে সুবিধাগুলি পাওয়া যায়, যেমন:
+<br><br> 🍀 ছুটির দিনে আপনার দোকান ২৪ ঘন্টা খোলা রাখা, যা বিক্রয় বৃদ্ধি করে।
+<br>🍀 সারা বিশ্বের গ্রাহকদের কাছে পৌঁছাতে আপনাকে সাহায্য করা।
+🍀 গ্রাহকদের আপনার পণ্য সম্পর্কে পর্যালোচনা পড়ার অনুমতি দেওয়া, যা আপনার ব্র্যান্ডের বিশ্বাসযোগ্যতা বাড়াতে পারে।
+<br>🍀 আপনি একটি ব্লগ শুরু করে আপনার অনলাইন উপস্থিতি
+<br>
+<br> আরও বাড়াতে পারেন৷ এটি আপনাকে আপনার ক্ষেত্রে একজন বিশেষজ্ঞ হিসাবে নিজেকে প্রতিষ্ঠিত করতে সহায়তা করতে পারে। আপনি Google অনুসন্ধানে আপনার ব্র্যান্ডের দৃশ্যমানতা বাড়াতে সার্চ ইঞ্জিন অপ্টিমাইজেশান (SEO) ব্যবহার করতে পারেন। এবং সোশ্যাল মিডিয়া প্ল্যাটফর্ম গুলিতে নিয়মিত পোস্ট করা আপনার জন্য বাড়িতি সুবিধা নিয়ে আসবে, যেখানে আপনার কাক্ষিত গ্রাহক / ক্রেতা ঘন ঘন ভিজিট করে৷
+</p>
+
 </div>
 </div>
 </section>
