--- a/ninetys.html
+++ b/ninetys.html
@@ -56,10 +56,9 @@
 <h3 class="text-dark">১. একটি দুর্দান্ত আইডিয়া দিয়ে শুরু করুন:</h3>
 
 <p  class="text-justify">একটি ব্যবসা শুরু করার পরিকল্পনা করার জন্য আপনার প্রথম ধাপ হল একটি সমস্যা এবং সমাধান চিহ্নিত করা। এর কারণ হল আমরা যদি লক্ষ্য করি সফল স্টার্টআপগুলি এমন কিছু ধারণা থেকে শুরু হয় যা গ্রাহকদের একটি গ্রুপের চাহিদা পূরণ করে। কিন্তু তার মানে এই না যে আপনার ধারণা সবসময় নতুন হতে হবে! আপনি বিদ্যমান পণ্য বা পরিষেবাগুলি এমনভাবে উপস্থাপন করতে পারেন যা ভোক্তার জন্য আরও ভাল এবং সহজ হতে পারে:<br>
-
-✍ পণ্যের উপস্থাপনের ধরণ পরিবর্তন
-<br>✍ নতুন কিছু বৈশিষ্ট্য যোগ করা
-<br>✍ গ্রাহকরা ইতিমধ্যেই পছন্দ করেন এমন পণ্যের নতুন ব্যবহার খোঁজা।
+<br>🍀 পণ্যের উপস্থাপনের ধরণ পরিবর্তন
+<br>🍀 নতুন কিছু বৈশিষ্ট্য যোগ করা
+<br>🍀 গ্রাহকরা ইতিমধ্যেই পছন্দ করেন এমন পণ্যের নতুন ব্যবহার খোঁজা।
 <br><br>
 উদাহরণস্বরূপ, আমরা যদি অ্যাপল এর শুরুর দিকটা দেখি তাহলে দেখতে পাবো। যখন অ্যাপল বাজারে উন্নতমানের কম্পিউটার নিয়ে এসেছে যা প্রযুক্তিগত দিক থেকে অনেকটা উন্নত এবং বাজারে আরও ভালভাবে ফিট করে। তারা আইফোন এবং আইপ্যাডের মতো নতুন পণ্যের বিকাশ অব্যাহত রেখেছে, প্রতিটি আপডেটের সাথে আরও কার্যকর করে তোলে। যেমন তারা iPads-এর জন্য একটি কীবোর্ড যোগ করছে যা তাদের ল্যাপটপের মতো করে সহজে ব্যবহার করা যায়। মনে হয় না অ্যাপলের বর্তমান জনপ্রিয়তা, বাজার সর্ম্পকে আপনাদের বলতে হবে।
 </p>
@@ -71,12 +70,12 @@
 <h3 class="text-dark">৩. আপনার স্টার্টআপের জন্য অর্থ বা মূলদন সংগ্রহ করুন</h3>
 
 <p  class="text-justify">আপনার খরচ যাই হোক না কেন, সেটি আপনাকে ম্যানেজ করতে হবে। শুরুর অবস্থায় মূলদন সংগ্রহ একটি কঠিন কাজ , তার জন্য আপনি কাজে লাগে পারেন নিচের মাধ্যম গুলোকে-
-<br>✍ ফ্রেন্ডস এবং ফ্যামিলি
-<br>✍ এঞ্জেল ইনভেস্টর
-<br>✍ ভেঞ্চার ক্যাপিটাল
-<br>✍ ব্যাংক লোন
+<br><br>🍀 ফ্রেন্ডস এবং ফ্যামিলি
+<br>🍀 এঞ্জেল ইনভেস্টর
+<br>🍀 ভেঞ্চার ক্যাপিটাল
+<br>🍀 ব্যাংক লোন
 <br>
-উন্নত দেশ গুলোতে এর বাহিরেও অনেক প্রতিষ্ঠান আছে যারা সহজ শর্তে ঋণ দেয় , আমাদের দেশে ওই সুবিধাগুলো তেমন একটা পাওয়া যায় না। তবে আপনার যদি পূর্বের আয় মোটামুটি ভালো থাকে আর সেটি ব্যাংক এর মাধ্যমে লেনদেন হয়ে থাকে, মূল কথা আপনার ব্যাংক স্টেটমেন্ট ভালো হয়, তাহলে আপনি ক্রেডিট কার্ড, কিংবা ব্যাংক থেকে ব্যাক্তগত ঋণ নিয়ে ও সেটি ম্যানেজ করতে পারেন ।
+<br>উন্নত দেশ গুলোতে এর বাহিরেও অনেক প্রতিষ্ঠান আছে যারা সহজ শর্তে ঋণ দেয় , আমাদের দেশে ওই সুবিধাগুলো তেমন একটা পাওয়া যায় না। তবে আপনার যদি পূর্বের আয় মোটামুটি ভালো থাকে আর সেটি ব্যাংক এর মাধ্যমে লেনদেন হয়ে থাকে, মূল কথা আপনার ব্যাংক স্টেটমেন্ট ভালো হয়, তাহলে আপনি ক্রেডিট কার্ড, কিংবা ব্যাংক থেকে ব্যাক্তগত ঋণ নিয়ে ও সেটি ম্যানেজ করতে পারেন ।
 <br>
 এতো কিছুর পরেও যদি আপনি আপনার পরিকল্পনা অনুযায়ী অর্থের যোগান করতে না পারেন এবং এর পরেও শুরু করতে চান তাহলে আপনাকে আপনার ব্যবসা পরিচলনার খরচ কমিয়ে নিয়ে আসার দিকে লক্ষ করতে হবে । এবং ঝুকি নিয়ে শুরু করতে হবে , যা অনেকইটাই ঝুকিপূর্ণ কারণ জরিপ অনুযায়ী দেখা যায় প্রায় ২৯% স্টার্টআপ ব্যর্থ হয় কারণ তাদের অর্থ ফুরিয়ে যায়।
 <br>
@@ -85,27 +84,27 @@
 <h3 class="text-dark">৪. সঠিক লোকেদের সাথে নিজেকে ঘিরে রাখুন</h3>
 
 <p  class="text-justify">ব্যবসা শুরু করার ক্ষেত্রে অনেক ঝুঁকি থাকতে পারে। সেজন্য আপনাকে পথ দেখানোর জন্য প্রয়োজনীয় ব্যবসায়িক উপদেষ্টার প্রয়োজন হবে, যেমন:
-<br>✍ আইনজীবী
-<br>✍ সার্টিফাইড পাবলিক অ্যাকাউন্ট্যান্টস (সিপিএ)
-<br>✍ ব্যাংকার
-<br>✍ ইন্সুরেন্স কোম্পানি
+<br><br>🍀 আইনজীবী
+<br>🍀 সার্টিফাইড পাবলিক অ্যাকাউন্ট্যান্টস (সিপিএ)
+<br>🍀 ব্যাংকার
+<br>🍀 ইন্সুরেন্স কোম্পানি
 <br>
-ছোট ব্যবসার প্রাথমিক পর্যায়ে সঠিক স্টার্টআপ টিম তৈরি করা বিশেষভাবে গুরুত্বপূর্ণ। এর মানে আপনি সাবধানে আপনার জন্য টিম মেম্বার নির্বাচন করতে চাইবেন:
-<br>✍ সহ-প্রতিষ্ঠাতা (Co-founders)
-<br>✍ কর্মচারী
+🍀ছোট ব্যবসার প্রাথমিক পর্যায়ে সঠিক স্টার্টআপ টিম তৈরি করা বিশেষভাবে গুরুত্বপূর্ণ। এর মানে আপনি সাবধানে আপনার জন্য টিম মেম্বার নির্বাচন করতে চাইবেন:
+<br>🍀 সহ-প্রতিষ্ঠাতা (Co-founders)
+<br>🍀 কর্মচারী
 </p>
 <h3 class="text-dark">৫. আইনি বিষয় গুলোর দিকে নজর দিন:</h3>
 
 <p  class="text-justify">
 আপনার পণ্য ডিজাইন করা থেকে শুরু করে আপনার কর্মক্ষেত্র (অফিস) সেট আপ করা, আপনার স্বপ্নের স্টার্টআপ খোলা অনেক মজার হতে পারে। কিন্তু আপনি আনুষ্ঠানিক ভাবে বাজারে প্রবেশ করার আগে, আপনার র্স্টাটআপকে সাফল্যের সর্বোত্তম স্থানে নেওয়ার জন্য অবশ্যই সঠিক আইনি পদক্ষেপ নিতে হবে, যার মধ্যে রয়েছে:
-<br>✍ একটি ব্যবসা লাইসেন্সের জন্য আবেদন
-<br>✍ আপনার ব্যবসার নাম নিবন্ধন
-<br>✍ ট্যাক্স আইডি নিবন্ধন
-<br>✍ ট্রেডমার্ক
-<br>✍ একটি ব্যবসায়িক ব্যাংক অ্যাকাউন্ট খোলা
-<br>✍ যে ইন্ড্রাস্টি নিয়ে কাজ করবেন তার সর্ম্পকে সঠিক বিষয় জানা (আইনি বিষয় সমূহ)<br>
-✍ ক্লায়েন্ট এবং অন্য যাদের সাথে আপনি কাজ করার পরিকল্পনা করছেন তাদের জন্য চুক্তি তৈরি করা
-<br></p>
+<br><br>🍀 একটি ব্যবসা লাইসেন্সের জন্য আবেদন
+<br>🍀 আপনার ব্যবসার নাম নিবন্ধন
+<br>🍀 ট্যাক্স আইডি নিবন্ধন
+<br>🍀 ট্রেডমার্ক
+<br>🍀 একটি ব্যবসায়িক ব্যাংক অ্যাকাউন্ট খোলা
+<br>🍀 যে ইন্ড্রাস্টি নিয়ে কাজ করবেন তার সর্ম্পকে সঠিক বিষয় জানা (আইনি বিষয় সমূহ)<br>
+🍀 ক্লায়েন্ট এবং অন্য যাদের সাথে আপনি কাজ করার পরিকল্পনা করছেন তাদের জন্য চুক্তি তৈরি করা
+</p>
 
 <h3 class="text-dark">৬. একটি অফিস স্থাপন করুন (এড্রেসেবল এবং অনলাইন)</h3>
 
@@ -117,7 +116,7 @@
 আজকের ডিজিটাল যুগে, একটি অনলাইন উপস্থিতি এবং ই-কমার্স প্ল্যাটফর্ম সেট আপ করা গুরুত্বপূর্ণ। আসলে, এটি ছাড়া সফল হতে আপনার সমস্যা হবে। এর কারণ হল গ্রাহকরা ক্রমবর্ধমানভাবে অনলাইনে কেনাকাটা করছেন এবং আপনার পণ্য সম্পর্কে আরও তথ্য জানতে গুগল ব্যবহার করছেন। এর উপরে, ওয়েবসাইট থাকলে সুবিধাগুলি পাওয়া যায়, যেমন:
 <br><br> 🍀 ছুটির দিনে আপনার দোকান ২৪ ঘন্টা খোলা রাখা, যা বিক্রয় বৃদ্ধি করে।
 <br>🍀 সারা বিশ্বের গ্রাহকদের কাছে পৌঁছাতে আপনাকে সাহায্য করা।
-🍀 গ্রাহকদের আপনার পণ্য সম্পর্কে পর্যালোচনা পড়ার অনুমতি দেওয়া, যা আপনার ব্র্যান্ডের বিশ্বাসযোগ্যতা বাড়াতে পারে।
+<br>🍀 গ্রাহকদের আপনার পণ্য সম্পর্কে পর্যালোচনা পড়ার অনুমতি দেওয়া, যা আপনার ব্র্যান্ডের বিশ্বাসযোগ্যতা বাড়াতে পারে।
 <br>🍀 আপনি একটি ব্লগ শুরু করে আপনার অনলাইন উপস্থিতি
 <br>
 <br> আরও বাড়াতে পারেন৷ এটি আপনাকে আপনার ক্ষেত্রে একজন বিশেষজ্ঞ হিসাবে নিজেকে প্রতিষ্ঠিত করতে সহায়তা করতে পারে। আপনি Google অনুসন্ধানে আপনার ব্র্যান্ডের দৃশ্যমানতা বাড়াতে সার্চ ইঞ্জিন অপ্টিমাইজেশান (SEO) ব্যবহার করতে পারেন। এবং সোশ্যাল মিডিয়া প্ল্যাটফর্ম গুলিতে নিয়মিত পোস্ট করা আপনার জন্য বাড়িতি সুবিধা নিয়ে আসবে, যেখানে আপনার কাক্ষিত গ্রাহক / ক্রেতা ঘন ঘন ভিজিট করে৷
