--- a/ninetys.html
+++ b/ninetys.html
@@ -47,7 +47,7 @@
 <div class="container">
    <div class="row">
 
-<h1 class="text-dark"> ৯ টি পদক্ষেপ / পরিকল্পনা আপনাকে সাহায্য করতে পারে:</h1>
+<h1 class="text-dark">স্টার্টআপের জন্য ৯ টি পদক্ষেপ / পরিকল্পনা আপনাকে সাহায্য করতে পারে:</h1>
 <p class="text-justify">
 আপনি যদি পূর্বে কখনও ব্যবসা না করে থাকেন তবে প্রথমবার ব্যবসা শুরুর ক্ষেত্রে একটু ভয় হতেই পারে। কারণ এর জন্য অনেক পরিশ্রম এবং পরিকল্পনা লাগে। তার উপর , বেশীর ভাগ ব্যবসার মাত্র অর্ধেক পাঁচ বছর বা তার বেশি সময় টিকে থাকে, বাকি গুলো এর মাধ্যেই বিলুপ্ত হয়ে যায় ।
 <br>
