--- a/ninetys.html
+++ b/ninetys.html
@@ -122,6 +122,22 @@
 <br> আরও বাড়াতে পারেন৷ এটি আপনাকে আপনার ক্ষেত্রে একজন বিশেষজ্ঞ হিসাবে নিজেকে প্রতিষ্ঠিত করতে সহায়তা করতে পারে। আপনি Google অনুসন্ধানে আপনার ব্র্যান্ডের দৃশ্যমানতা বাড়াতে সার্চ ইঞ্জিন অপ্টিমাইজেশান (SEO) ব্যবহার করতে পারেন। এবং সোশ্যাল মিডিয়া প্ল্যাটফর্ম গুলিতে নিয়মিত পোস্ট করা আপনার জন্য বাড়িতি সুবিধা নিয়ে আসবে, যেখানে আপনার কাক্ষিত গ্রাহক / ক্রেতা ঘন ঘন ভিজিট করে৷
 </p>
 
+<h3 class="text-dark">৭. একটি মার্কেটিং পরিকল্পনা তৈরি করুন</h3>
+
+<p class="text-justify">প্রতিটি স্টার্টআপকে মার্কেটিংয়ের জন্য বিভিন্ন পরিমাণ অর্থ এবং সময় ব্যয় করতে হয়। এটি একটি গুরুত্বপূর্ণ ব্যয়, কারণ এটি আপনাকে সাহায্য করে:
+<br>ব্র্যান্ড পরিচয় স্থাপন করতে।
+<br>
+<br><br>প্রতিযোগীতায় এগিয়ে রাখতে
+<br>🍀 গ্রাহকের সাথে সর্ম্পক তৈরি এবং বিশ্বাস বৃদ্ধি করতে
+দৃশ্যমানতা বাড়ায়, যা নতুন গ্রাহকদের আকর্ষণ করে
+আপনার কোম্পানির খ্যাতি শক্তিশালী করতে
+কিছু র্স্টাটআপ মার্কেটিং কার্যকলাপ যা আপনার লক্ষ্য করা উচিত:
+<br>🍀 গ্রাহকদের সম্পৃক্ত করতে এবং কুপন বা অফার প্রচার করতে সামাজিক মিডিয়া ব্যবহার করা
+রেফারেলের জন্য পুরষ্কার দেওয়া, যা আরও ব্যবসা নিয়ে আসে
+<br>🍀 বিনামূল্যে সেম্পল বা ডেমো অফার করা
+কমিউনিটি ইভেন্ট গুলোতে স্পন্সর করা যাতে আপনার প্রতিষ্ঠান / পণ্য সর্ম্পকে লোকজন জানতে পারে
+</p>
+
 </div>
 </div>
 </section>
