--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ Email : musammatsamina@gmail.com
 Mobile: 01722393251 / 01516776953
 Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.
 Profile: https://facebook.com/musammat.samina
-website:https://musammatsamina.github.io
+website:https://musammatsamina.github.io |
+https://livelearnislam773354777.wordpress.com/
 ---->
 <!DOCTYPE html>
 <html class="no-js">
@@ -218,7 +219,13 @@ website:https://musammatsamina.github.io
 <a href="http://risingbd.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/risingbd.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark">Rising Bd</h5>
-				      </a>				       
+				      </a>		
+<div class="line line-lg w-3x b-b m-auto"></div> 
+
+<a href="http://techvision24.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/techvision24.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h5 class="text-dark">Techvision24.com</h5>
+				      </a>				       		       
 </p>
      </div>
     </div>
