--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ https://livelearnislam773354777.wordpress.com/
 				      </a>		
 <div class="line line-lg w-3x b-b m-auto"></div> 
 
-<a href="http://techvision24.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/techvision24.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="http://techvision24.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tackvision-Bangla.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark">Techvision24.com</h5>
 				      </a>				       		       
