--- a/index.html
+++ b/index.html
@@ -761,6 +761,11 @@ ACI Seed Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 	<h5 class="text-dark"> AB Fashion House</h5>
 				     			        </a> 
 
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://techshopbd.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/techshopbd_1715346033740.jpg" alt="" class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark">Tech Shop BD</h5>
+				     			        </a> 
 				       </p>
 				       </div>
 				    </div>
