--- a/navigation.html
+++ b/navigation.html
@@ -11,7 +11,7 @@ Profile: https://facebook.com/musammat.samina
 					<button class="btn btn-link visible-xs pull-right m-r m-t-sm" type="button" data-toggle="collapse" data-target=".navbar-collapse">
 						<i class="fa fa-bars"></i>
 					</button>
-					<a href="." class="navbar-brand m-r-lg"><img src="imgs/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Musammat Samina</span></a>
+					<a href="." class="navbar-brand m-r-lg"><img src="imgs/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Samina's Journal</span></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -50,7 +50,7 @@ Profile: https://facebook.com/musammat.samina
                                                 <img class="thumb-xl img-circle b b-10x b-a-white" src="imgs/samina.jpg" />
 						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা </br>( مسمت سمين)</h1>
                                                 <h3 class="h3 font-semi-bold text-danger>  MUSAMMAT SAMINA  </h3>
-						<h3 class="m-t-lg l-h-1x text-info">Software Engineer | Programmer | Publisher | Photographer | Traveler </h3>
+						<h3 class="m-t-lg l-h-1x text-info">Software Engineer | Programmer | Entrepreneur | Photographer | Traveler </h3>
 							
                                                 <div class="text-lg m-t">
 							<a class="m-r-sm" href="https://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
