--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ https://livelearnislam773354777.wordpress.com/
 <html class="no-js">
 	<head>
 		<meta charset="utf-8">
-		<title>Musammat Samina</title>
+		<title>Samina's Journal</title>
 		<meta name="description" content="Musammat Samina, women entrepreneur's networking platform">
 <meta name="viewport" content="width=device-width">
 
