--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Ro
 Profile: https://facebook.com/musammat.samina
 website:https://musammatsamina.github.io |
 https://livelearnislam773354777.wordpress.com/
+https://www.facebook.com/profile.php?id=100075473425112
 ---->
 <!DOCTYPE html>
 <html class="no-js">
@@ -278,7 +279,7 @@ https://livelearnislam773354777.wordpress.com/
 	       
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="https://www.somewhereinblog.net/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/somewhereinblog.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://www.somewhereinblog.net/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/somewhereinblog.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark"> Somewherein Blog </h5>
 				      </a>	
