--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 	       
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="https://www.somewhereinblog.net/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/somewhereinblog.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://www.somewhereinblog.net/blog/sabinarocks/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/somewhereinblog.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark"> Somewherein Blog </h5>
 				      </a>	
