--- a/alphabet.html
+++ b/alphabet.html
@@ -37,17 +37,17 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="container">
    <div class="row">
 <div class="owl-carousel owl-theme">
-    <div class="item"><img src="imgs/s1.jpg" alt="Jahangir Gate"></div>
-    <div class="item"><img src="imgs/s2.jpg" alt="Bangladesh Army Stadium"></div>
-    <div class="item"><img src="imgs/s3.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s4.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s5.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s6.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s7.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s8.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s9.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s10.jpg" alt=""></div>
-    <div class="item"><img src="imgs/s11.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya1.jpg" alt="Jahangir Gate"></div>
+    <div class="item"><img src="imgs/sya2.jpg" alt="Bangladesh Army Stadium"></div>
+    <div class="item"><img src="imgs/sya3.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya4.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya5.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya6.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya7.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya8.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya9.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya10.jpg" alt=""></div>
+    <div class="item"><img src="imgs/sya11.jpg" alt=""></div>
    
 </div></div>
 </div>
