--- a/alphabet.html
+++ b/alphabet.html
@@ -12,7 +12,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 		<meta charset="utf-8">
 		<title>Bangla Alphabet</title>
 		<meta name="description" content="Alphabet Musammat Samina">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0, maximum-scale=1, user-scalable=yes" />
 		<link rel="shortcut icon" href="/favicon.ico">
 
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
