--- a/alphabet.html
+++ b/alphabet.html
@@ -82,6 +82,8 @@ $('.owl-carousel').owlCarousel({
     margin:1,
     nav:true,
     dots:false,
+    mouseDrag: true,
+    responsiveClass: true,
     navContainer: '#nav',
 navText: [
 '<i class="fa fa-angle-left"></i>',  
