--- a/alphabet.html
+++ b/alphabet.html
@@ -96,9 +96,13 @@ navText: [
         },
         600:{
             items:1,
-            nav:false
+            nav:true
         },
-        1000:{
+        900:{
+            items:1,
+            nav:true
+        },
+        1200:{
             items:1,
             nav:true,
             loop:false
