--- a/healthcontent.html
+++ b/healthcontent.html
@@ -31,7 +31,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="container">
    <div class="row">
 <div class="owl-carousel owl-theme">
-    <div class="item"><img src="imgs/hc1.jpg" alt="Jahangir Gate"></div>
+   <!--- <div class="item"><img src="imgs/hc1.jpg" alt="Jahangir Gate"></div>
     <div class="item"><img src="imgs/hc2.jpg" alt="Bangladesh Army Stadium"></div>
     <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc4.jpg" alt=""></div>
@@ -44,7 +44,7 @@ https://www.facebook.com/profile.php?id=100075473425112
     <div class="item"><img src="imgs/hc11.jpg" alt=""></div>
    <div class="item"><img src="imgs/hc12.jpg" alt=""></div>
 <div class="item"><img src="imgs/hc13.jpg" alt=""></div>
-<div class="item"><img src="imgs/hc14.jpg" alt=""></div>
+<div class="item"><img src="imgs/hc14.jpg" alt=""></div> ------>
 <div class="item"><img src="imgs/hc15.jpg" alt=""></div>
 <div class="item"><img src="imgs/hc16.jpg" alt=""></div>
 <div class="item"><img src="imgs/hc17.jpg" alt=""></div>
