--- a/healthcontent.html
+++ b/healthcontent.html
@@ -10,7 +10,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <html class="no-js">
 	<head>
 		<meta charset="utf-8">
-		<title>Bangla Alphabet</title>
+		<title>Health Journal</title>
 		<meta name="description" content="Health content Musammat Samina">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="/favicon.ico">
