--- a/healthcontent.html
+++ b/healthcontent.html
@@ -31,13 +31,13 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="container">
    <div class="row">
 <div class="owl-carousel owl-theme">
-   <!--- <div class="item"><img src="imgs/hc1.jpg" alt="Jahangir Gate"></div>
-    <div class="item"><img src="imgs/hc2.jpg" alt="Bangladesh Army Stadium"></div>
+   <!--- <div class="item"><img src="imgs/hc1.jpg" alt="Symptoms"></div>
+    <div class="item"><img src="imgs/hc2.jpg" alt=" health issues "></div>
     <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc4.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc4.jpg" alt=""></div>----->
     <div class="item"><img src="imgs/hc5.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc6.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc7.jpg" alt=""></div>------>
+    <div class="item"><img src="imgs/hc7.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc8.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc9.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc10.jpg" alt=""></div>
