--- a/healthcontent.html
+++ b/healthcontent.html
@@ -31,9 +31,9 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="container">
    <div class="row">
 <div class="owl-carousel owl-theme">
-   <!--- <div class="item"><img src="imgs/hc1.jpg" alt="Symptoms"></div>
+    <div class="item"><img src="imgs/hc1.jpg" alt="Symptoms"></div>
     <div class="item"><img src="imgs/hc2.jpg" alt=" health issues "></div>
-    <div class="item"><img src="imgs/hc3.jpg" alt=""></div>---->
+    <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc4.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc5.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc6.jpg" alt=""></div>
