--- a/healthcontent.html
+++ b/healthcontent.html
@@ -14,7 +14,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 		<meta name="description" content="Health content Musammat Samina">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="/favicon.ico">
-
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
         <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 	
@@ -61,7 +61,9 @@ https://www.facebook.com/profile.php?id=100075473425112
 </div>
 </div>
 </section>
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
