--- a/healthcontent.html
+++ b/healthcontent.html
@@ -30,7 +30,12 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<div class="owl-carousel owl-theme">
+<div id="carousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel" data-slide-to="1"></li>
+    <li data-target="#carousel" data-slide-to="2"></li>
+  </ol>
     <div class="item"><img src="imgs/hc1.jpg" alt="Symptoms"></div>
     <div class="item"><img src="imgs/hc2.jpg" alt=" health issues "></div>
     <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
