--- a/healthcontent.html
+++ b/healthcontent.html
@@ -30,7 +30,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<div id="carousel" class="carousel slide" data-ride="carousel">
+<div id="carousel" class="owl-carousel owl-theme slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carousel" data-slide-to="0" class="active"></li>
     <li data-target="#carousel" data-slide-to="1"></li>
@@ -98,7 +98,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-var owl = $('.carousel');
+var owl = $('.owl-carousel');
 owl.owlCarousel({
     rtl:true,
     loop:true,
