--- a/healthcontent.html
+++ b/healthcontent.html
@@ -27,7 +27,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<div id="carousel" class="owl-carousel owl-theme slide" data-ride="carousel">
+<div id="carousel" class="carousel owl-theme slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carousel" data-slide-to="0" class="active"></li>
     <li data-target="#carousel" data-slide-to="1"></li>
