--- a/healthcontent.html
+++ b/healthcontent.html
@@ -94,7 +94,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-var owl = $('.owl-carousel');
+var owl = $('.carousel');
 owl.owlCarousel({
     rtl:true,
     loop:true,
