--- a/healthcontent.html
+++ b/healthcontent.html
@@ -125,10 +125,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-
-$('.carousel').carousel({
-  interval: 2000
-});
+$('.carousel').carousel();
 
 </script>
 </body>
