--- a/health.html
+++ b/health.html
@@ -85,7 +85,39 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-$('.carousel').carousel();
+var owl = $('.carousel');
+owl.owlCarousel({
+    rtl:true,
+    loop:true,
+    margin:1,
+    nav:true,
+    dots:false,
+    mouseDrag: true,
+    responsiveClass: true,
+    navContainer: '#nav',
+navText: [
+'<i class="fa fa-angle-left"></i>',  
+'<i class="fa fa-angle-right"></i>'],  responsiveClass:true,
+  responsive:{
+        0:{
+            items:1,
+            nav:true
+        },
+        600:{
+            items:1,
+            nav:true
+        },
+        900:{
+            items:1,
+            nav:true
+        },
+        1200:{
+            items:1,
+            nav:true,
+            loop:false
+        }
+    }
+});
 
 </script>
 </body>
