--- a/healthcontent.html
+++ b/healthcontent.html
@@ -54,6 +54,13 @@ https://www.facebook.com/profile.php?id=100075473425112
     <div class="item"><img src="imgs/hc21.jpg" alt=""></div>
 <div class="item"><img src="imgs/hc22.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc23.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc24.jpg" alt=""></div>
+<div class="item"><img src="imgs/hc25.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc26.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc27.jpg" alt=""></div>
+<div class="item"><img src="imgs/hc28.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc29.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc30.jpg" alt=""></div>
 </div>
 <div class="slider_nav">
 	<button class="am-next">Next</button>
